src/test/ui/macros/macro-outer-attributes.stderr
error[E0425]: cannot find function `bar` in module `a`
  --> $DIR/macro-outer-attributes.rs:28:8
   |
LL |     a::bar(); //~ ERROR cannot find function `bar` in module `a`
   |        ^^^ not found in `a`
help: possible candidate is found in another module, you can import it into scope
   |
LL | use b::bar;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
